tests/parser/bug_78/invalid_11.m.out
In invalid_11.m, line 5
|    foo
|    ^^^ error: expected end of statement, found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
